# pgpgpg

./: INSTALL  Makefile.am  Makefile.in  OBUGS  THANKS  TODO  acconfig.h  argvfactory.c  argvfactory.h  config.h.in  configure  configure.in  debug.h  defaultkey.c  defaultkey.h  guessarmortype.c  guessarmortype.h  includes.h  main.c  mygetopt.c  mygetopt.h  pgpopts.c  pgpopts.h  support.c
debian/: changelog  control  copyright  docs  manpages  pgpgpg.1  postinst  prerm  rules  watch
debian/patches/: 010_old-changes.patch  series
debian/tests/: control
